--- a/package.json
+++ b/package.json
@@ -31,13 +31,16 @@
   ],
   "dependencies": {
     "each-async": "^1.0.0",
-    "node-sass": "^3.4.0",
     "object-assign": "^4.0.1"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-nodeunit": "^0.4.1"
+    "grunt-contrib-nodeunit": "^0.4.1",
+    "node-sass": "^3.4.0"
+  },
+  "peerDependencies": {
+    "node-sass": "*"
   }
 }
