Move to @ticketmaster namespace for fork

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "grunt-sass",
+  "name": "@ticketmaster/grunt-sass",
   "version": "1.1.0",
   "description": "Compile Sass to CSS using node-sass",
   "license": "MIT",
