--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ticketmaster/grunt-sass",
-  "version": "1.1.0",
+  "version": "1.1.0-tm1",
   "description": "Compile Sass to CSS using node-sass",
   "license": "MIT",
   "repository": "sindresorhus/grunt-sass",
